--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <body>
     <h1>Danh sách đỉ phú yên</h1>
     <a href="https://www.facebook.com/chu.dieu.my.926114">Lê thị trà my bím hồng 2k9</a>
-  <img src="/img/anh1.jpg" alt="đỉ số 1" width="20%">
-  <a href="tel : 084937047"></a>
+<a href="/"><img src="img/anh1.jpg" alt="đỉ số 1 "width 20%></a>
   </body>
 
 </html>
